--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,13 @@
 body {
     font-family: 'Roboto', sans-serif,  Georgia, 'Times New Roman', Times, serif;
+    background-image: url("../images/textured_paper.png");
+    min-height: 100vh;
+    position: relative;
 }
 
 h1, h2, h3 {
     font-family: 'PT Serif', serif;
-    font-size: 1.7rem;
+    font-size: 1.7em;
 }
 
 p {
@@ -12,6 +15,12 @@ p {
 }
 nav {
     height: 60px;
+    box-shadow: 5px 5px 5px grey;
+}
+
+
+footer {
+    border-top: 5px solid rgba(4, 223, 223, 0.685);
 }
 
 #nav-brand{
@@ -20,10 +29,30 @@ nav {
     right: -7%;
     vertical-align: middle;
     font-size: 1.75rem;
+    font-family:  'PT Serif', serif;
 }
 
 #text-intro {
     font-weight: bold;
     font-size: 1.25em;
-    font-family: serif;
+    font-family: 'PT Serif', serif;
+}
+
+/* format gallery */
+.thumbnail-container {
+    position: relative;
+}
+
+.gallery-thumbnail {
+    position: relative;
+}
+.gallery-caption {
+    font-family: 'PT Serif', serif;
+    position: absolute;
+    bottom:10px;
+    text-align: center;
+    width: 100%;
+    height: 30px;
+    background-color: rgba(4, 223, 223, 0.75);
+    color: aliceblue;
 }
